# prcs2hg

./: .codeclimate.yml  .hgignore  .hgtags  ChangeLog  MANIFEST.in  Makefile.am  NEWS  README  README.md  azure-pipelines.yml  bitbucket-pipelines.yml  configure.ac  prcs2hg.pl  setup.py
prcs/: __init__.py
prcs2hg/: __init__.py  prcs.py  sexpdata.py
prcslib/: __init__.py
scripts/: prcs2hg
